# libosmo-abis

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  TODO-RELEASE  configure.ac  libosmoabis.pc.in  libosmotrau.pc.in
contrib/: jenkins.sh  libosmo-abis.spec  libosmo-abis.spec.in
contrib/trau2rtp/: Makefile  README  e1_ts2_efr.log.bz2  e1_ts2_fr.log.bz2  strace-write-parse.py  trau2rtp.c
debian/: changelog  control  copyright  libosmoabis3.install  libosmotrau0.install  rules
doc/: Makefile.am
doc/examples/: .gitignore  Makefile.am
doc/examples/lapd-over-datagram/: lapd-over-datagram-network.c  lapd-over-datagram-user.c
include/: Makefile.am  internal.h  mISDNif.h
include/osmocom/: Makefile.am
include/osmocom/abis/: Makefile.am  e1_input.h  ipa.h  ipaccess.h  lapd.h  lapd_pcap.h  logging.h  signal.h  subchan_demux.h  trau_frame.h  unixsocket_proto.h  version.h.tpl
include/osmocom/gsm/: Makefile.am
include/osmocom/gsm/abis/: e1_input.h  trau_frame.h
include/osmocom/trau/: Makefile.am  amr_trau.h  clearmode.h  csd_ra2.h  csd_raa_prime.h  csd_v110.h  osmo_ortp.h  tfo_frame.h  trau_frame.h  trau_pcu_ericsson.h  trau_rtp.h  trau_sync.h  twts007.h
src/: Makefile.am  e1_input.c  e1_input_vty.c  init.c  ipa_proxy.c  socket.c  subchan_demux.c  trau_frame.c
src/input/: Makefile.am  dahdi.c  e1d.c  hsl.c  ipa.c  ipa_keepalive.c  ipaccess.c  lapd.c  lapd_pcap.c  misdn.c  rs232.c  unixsocket.c  unixsocket_proto.h
src/trau/: Makefile.am  amr_misc.c  amr_rtp.c  amr_trau.c  csd_ra2.c  csd_v110.c  osmo_ortp.c  raa_prime_decode.c  raa_prime_encode.c  tfo_frame.c  trau_frame.c  trau_pcu_ericsson.c  trau_rtp_conv.c  trau_sync.c  twts007.c  ubit_buf.h
tests/: Makefile.am  e1inp_hsl_bsc_test.c  e1inp_hsl_bts_test.c  e1inp_ipa_bsc_test.c  e1inp_ipa_bts_test.c  ipa_proxy_test.c  testsuite.at
tests/amr/: rtp-in-bwe.hex  rtp-in-oa.hex  rtp2trau-bwe2fr.ok  rtp2trau-bwe2hr.ok  rtp2trau-oa2fr.ok  rtp2trau-oa2hr.ok  rtp2trau-oax2fr.ok  rtp2trau-oax2hr.ok  rtp2trau_amr.c  trau-amr-16k-bwe.ok  trau-amr-16k-oa.ok  trau-amr-16k-oax.ok  trau-amr-16k.in  trau-amr-8k-bwe.ok  trau-amr-8k-oa.ok  trau-amr-8k-oax.ok  trau-amr-8k.in  trau2rtp_amr.c
tests/ipa_recv/: ipa_recv_test.c  ipa_recv_test.ok
tests/raa_prime/: README.test-data  d144-ul-input.asc  nokia-tcsm2-atrau.hex  test_dec.c  test_enc.c
tests/rtp_test/: rtp_test.c  rtp_test.ok
tests/subchan_demux/: subchan_demux_test.c  subchan_demux_test.ok
tests/tfo/: enc_test_efr.in  enc_test_fr.in  enc_test_hr.in  extract_test_efr.ok  extract_test_fr.ok  extract_test_hr.ok  rtp2tfo.c  tfo_extr_test.c
tests/tfo/nokia_tcsm2/: README  tfo-efr.hex  tfo-fr.hex  tfo-hr.hex
tests/trau_conv/: efr_speech_basic.hex  efr_speech_twts001_good.hex  efr_speech_twts001_mix.hex  fr_speech_basic.hex  fr_speech_twts001_good.hex  fr_speech_twts001_mix.hex  hr_speech_invsid_bits.hex  hr_speech_rfc5993.hex  hr_speech_ts101318.hex  hr_speech_twts002.hex  rtp2trau_efr_dl1.ok  rtp2trau_efr_dl2.ok  rtp2trau_efr_ul1.ok  rtp2trau_efr_ul2.ok  rtp2trau_efr_ul3.ok  rtp2trau_fr_dl1.ok  rtp2trau_fr_dl2.ok  rtp2trau_fr_ul1.ok  rtp2trau_fr_ul2.ok  rtp2trau_fr_ul3.ok  rtp2trau_gen.c  rtp2trau_hr_dl.ok  rtp2trau_hr_ul1.ok  rtp2trau_hr_ul2.ok  rtp2trau_hr_ul3.ok  trau16_efr.in  trau16_efr_std.ok  trau16_efr_twts001.ok  trau16_fr.in  trau16_fr_std.ok  trau16_fr_twts001.ok  trau16_to_rtp.c  trau2rtp_gen.c  trau2rtp_gen.notes  trau2rtp_hr.in  trau2rtp_hr_std.ok  trau2rtp_hr_twts002.ok  tw5reader.c  tw5reader.h
tests/trau_pcu_ericsson/: trau_pcu_ericsson_test.c  trau_pcu_ericsson_test.ok
tests/trau_sync/: trau_sync_test.c  trau_sync_test.err  trau_sync_test.ok
