noinst_HEADERS=mISDNif.h internal.h

nobase_include_HEADERS = \
	osmocom/abis/abis.h \
	osmocom/abis/e1_input.h \
	osmocom/abis/ipa.h \
	osmocom/abis/ipaccess.h \
	osmocom/abis/lapd.h \
	osmocom/abis/lapd_pcap.h \
	osmocom/abis/subchan_demux.h \
	osmocom/abis/trau_frame.h \
	osmocom/abis/unixsocket_proto.h \
	osmocom/trau/csd_ra2.h \
	osmocom/trau/csd_raa_prime.h \
	osmocom/trau/trau_frame.h \
	osmocom/trau/trau_pcu_ericsson.h \
	osmocom/trau/trau_rtp.h \
	osmocom/trau/trau_sync.h \
	$(NULL)

if ENABLE_ORTP
nobase_include_HEADERS += osmocom/trau/osmo_ortp.h
endif
